Revision history for Vim-X

{{$NEXT}}
 [API CHANGES]

 [BUG FIXES]

 [DOCUMENTATION]

 [ENHANCEMENTS]
 - new functions: vim_current_file(), vim_expand(), vim_input()

 [NEW FEATURES]

 [STATISTICS]

1.0.1 2014-11-26
 [BUG FIXES]
 - 'vim_eval' wasn't exported.

 [DOCUMENTATION]
 - Synopsis typo fix. (GH#2, Graham Todd)

 [STATISTICS]
 - code churn: 4 files changed, 17 insertions(+), 10 deletions(-)

1.0.0 2014-05-07
 [API CHANGES]
 - vim_range() now returns a Vim::X::Range object.

 [STATISTICS]
 - code churn: 7 files changed, 210 insertions(+), 11 deletions(-)

0.3.0 2014-04-27
 [BUG FIXES]
 - Removed a spurious warning. (GH#1, Hernan Lopes)

 [ENHANCEMENTS]
 - Add source_function_dir().

 [STATISTICS]
 - code churn: 4 files changed, 99 insertions(+), 18 deletions(-)

0.2.0 2014-04-08
 [BUG FIXES]
 - Tests skipped if vim not found, or not compiled with perl support.

 [ENHANCEMENTS]
 - Added 'load_function_dir()' loading mechanism.

 [STATISTICS]
 - code churn: 3 files changed, 106 insertions(+), 32 deletions(-)

0.1.0 2014-04-07
 - Adding tests, and pushing as stable.

 [STATISTICS]
 - code churn: 11 files changed, 97 insertions(+), 28 deletions(-)

0.0.1_0 2014-04-02
 - First version, unleashed on an unsuspecting world.

 [STATISTICS]
 - code churn: 12 files changed, 82 insertions(+), 60 deletions(-)
